tests/fixtures/workflows/nested/invalid/duplicate-b.invalid
export const meta = {
  name: "duplicate-name",
  description: "Duplicate B"
};
